// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

// Looking for ways to speed up your queries, or scale easily with your serverless or edge functions?
// Try Prisma Accelerate: https://pris.ly/cli/accelerate-init

generator client {
  provider     = "prisma-client"
  output       = "../generated/prisma"
  moduleFormat = "cjs"
}

datasource db {
  provider = "postgresql"
}

enum UserRole {
  ADMIN
  INTEGRATOR
  OWNER
  TENANT
}

enum DeviceStatus {
  PROVISIONED
  ONLINE
  OFFLINE
  MAINTENANCE
}

model User {
  id        String    @id @default(uuid())
  createdAt DateTime  @default(now()) @db.Timestamptz
  updatedAt DateTime  @updatedAt @db.Timestamptz
  deletedAt DateTime? @db.Timestamptz

  email        String   @unique
  passwordHash String
  name         String
  role         UserRole @default(TENANT)
  isActive     Boolean  @default(true)

  ownedPlants Plant[]   @relation("UserOwnedPlants")
  tenancies   Tenancy[]
}

model Plant {
  id        String    @id @default(uuid())
  createdAt DateTime  @default(now()) @db.Timestamptz
  updatedAt DateTime  @updatedAt @db.Timestamptz
  deletedAt DateTime? @db.Timestamptz

  name    String
  address String?
  ownerId String

  owner   User     @relation("UserOwnedPlants", fields: [ownerId], references: [id])
  units   Unit[]
  devices Device[]
}

model Unit {
  id        String    @id @default(uuid())
  createdAt DateTime  @default(now()) @db.Timestamptz
  updatedAt DateTime  @updatedAt @db.Timestamptz
  deletedAt DateTime? @db.Timestamptz

  name    String
  plantId String

  plant       Plant        @relation(fields: [plantId], references: [id], onDelete: Cascade)
  tenancies   Tenancy[]
  channelMaps ChannelMap[]
}

model Device {
  id        String    @id @default(uuid())
  createdAt DateTime  @default(now()) @db.Timestamptz
  updatedAt DateTime  @updatedAt @db.Timestamptz
  deletedAt DateTime? @db.Timestamptz

  serialNumber    String       @unique
  firmwareVersion String?
  status          DeviceStatus @default(PROVISIONED)
  plantId         String
  metadata        Json?        @db.JsonB
  lastSeenAt      DateTime?    @db.Timestamptz

  plant    Plant        @relation(fields: [plantId], references: [id])
  channels ChannelMap[]
}

model ChannelMap {
  id        String    @id @default(uuid())
  createdAt DateTime  @default(now()) @db.Timestamptz
  updatedAt DateTime  @updatedAt @db.Timestamptz
  deletedAt DateTime? @db.Timestamptz

  deviceId     String
  channelIndex Int    @default(0)
  unitId       String

  device Device @relation(fields: [deviceId], references: [id], onDelete: Cascade)
  unit   Unit   @relation(fields: [unitId], references: [id])
}

model Tenancy {
  id        String    @id @default(uuid())
  createdAt DateTime  @default(now()) @db.Timestamptz
  updatedAt DateTime  @updatedAt @db.Timestamptz
  deletedAt DateTime? @db.Timestamptz

  unitId    String
  tenantId  String
  startDate DateTime  @db.Timestamptz
  endDate   DateTime? @db.Timestamptz

  unit   Unit @relation(fields: [unitId], references: [id], onDelete: Cascade)
  tenant User @relation(fields: [tenantId], references: [id])
}

model Tariff {
  id String @id @default(uuid())

  pricePerKwh Decimal   @db.Decimal(10, 4)
  validFrom   DateTime  @db.Date
  validUntil  DateTime? @db.Date
}
